--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -9,18 +9,18 @@
 \chapter{Introduction}\label{ch:introduction}
 
 
-Chagas disease is a tropical parasitic epidemic of global reach, spread mostly across 21 Latin American countries. The World Health Organization (WHO) estimates more than six million infected people worldwide~\cite{who2016}. Caused by the \textit{Trypanosoma cruzi} parasite, its transmission occurs mostly in the American endemic regions via the \textit{Triatoma infestans} insect family. It is also known as ``kissing bug'', ``vinchuca'' in the local variation for Argentina, Bolivia, Chile and Paraguay, and ``chinche'' in Central America.
+Chagas disease is a tropical parasitic epidemic of global reach, spread mostly across 21 Latin American countries. The World Health Organization (WHO) estimates more than six million infected people worldwide~\citep{who2016}. Caused by the \textit{Trypanosoma cruzi} parasite, its transmission occurs mostly in the American endemic regions via the \textit{Triatoma infestans} insect family. It is also known as ``kissing bug'', ``vinchuca'' in the local variation for Argentina, Bolivia, Chile and Paraguay, and ``chinche'' in Central America.
 In recent years and due to globalization and migrations, the disease has become an %health
-issue in other continents~\cite{schmunis2010chagas},
-particularly in countries that receive Latin American immigrants such as Spain~\cite{navarro2012chagas} and the United States~\cite{hotez2013unfolding}.
+issue in other continents~\citep{schmunis2010chagas},
+particularly in countries that receive Latin American immigrants such as Spain~\citep{navarro2012chagas} and the United States~\citep{hotez2013unfolding}.
 As a consequence this disease has become a global health problem.
 
 
-A crucial characteristic of the infection is that it may last 10 to 30 years in an individual without being detected~\cite{rassi2012american}, which greatly complicates effective detection and treatment.
+A crucial characteristic of the infection is that it may last 10 to 30 years in an individual without being detected~\citep{rassi2012american}, which greatly complicates effective detection and treatment.
 About 30\% of individuals with chronic Chagas disease will develop life-threatening cardiomyopathies or gastrointestinal disorders, whereas
 the remaining individuals will never develop symptoms.
-Long-term human mobility, particularly seasonal and permanent rural-urban migration, play a key role in the epidemic spread~\cite{briceno2009chagas}.
-Other relevant routes of transmission include blood transfusion, congenital contagion --with an estimated 14,000 newborns infected each year in the Americas~\cite{OPS2006chagas}--, organ transplants, accidental ingestion of food contaminated by \textit{Trypanosoma cruzi}, and even, in a minor scale,
+Long-term human mobility, particularly seasonal and permanent rural-urban migration, play a key role in the epidemic spread~\citep{briceno2009chagas}.
+Other relevant routes of transmission include blood transfusion, congenital contagion --with an estimated 14,000 newborns infected each year in the Americas~\citep{OPS2006chagas}--, organ transplants, accidental ingestion of food contaminated by \textit{Trypanosoma cruzi}, and even, in a minor scale,
 by laboratory accidents.
 
 The spatial dissemination of a congenitally transmitted disease sidesteps the available measures to control risk groups, and shows that individuals who have not been exposed to the disease vector should also be included in detection campaigns.
@@ -62,40 +62,40 @@ We then give this work's conclusions in \cref{ch:conclusions}, along with drawba
 
 \section{Mobile Phone Records, Mobility and Epidemiology}
 
-The scientific analysis of mobile phone datasets, collected by operators within their network, is a recent field of study, with a corpus of published works starting in 2005, and a noticeable increase of publications from 2012 onwards, as reported in the survey of \cite{naboulsi2015mobile}.
-Other milestones of this increased interest of the scientific community are the NetMob conferences, focused on mobile phone data analysis (see \cite{netmob}).
+The scientific analysis of mobile phone datasets, collected by operators within their network, is a recent field of study, with a corpus of published works starting in 2005, and a noticeable increase of publications from 2012 onwards, as reported in the survey of \citep{naboulsi2015mobile}.
+Other milestones of this increased interest of the scientific community are the NetMob conferences, focused on mobile phone data analysis (see \citep{netmob}).
 
 Mobile traffic contains information about the movement, interactions, and mobile service consumption of individuals at unprecedented scales.
 This attracted scientists from multiple disciplines:
 sociologists, epidemiologists, physicists, transportation and telecommunication experts found in these datasets a clear opportunity to bring their analyses to an unprecedented scale while retaining a high level of detail on each individual.
 
 Thanks to the growing availability of datasets, collaborations between academic research groups and network operators based on the analysis of real-world mobile traffic have been flourishing.
-A significant example is the Data for Development Challenges by Orange (\cite{d4d}).
+A significant example is the Data for Development Challenges by Orange (\citep{d4d}).
 
 One of the main research subject is mobility analysis.
 Calls can be located by means of knowing cellphone tower geolocalization and by then matching calls to one of these points.
 This provides fine granularity projections of users trajectories.
 Users have been found to show a strong regularity in their movement patterns,
-both in space and time, as described in \cite{gonzalez2008understanding}.
+both in space and time, as described in \citep{gonzalez2008understanding}.
 
-In another study, \cite{song2010limits} explore the limits of predictability in human dynamics by studying the mobility patterns of anonymized mobile phone users.
+In another study, \citep{song2010limits} explore the limits of predictability in human dynamics by studying the mobility patterns of anonymized mobile phone users.
 By measuring the entropy of individuals trajectories, the authors found a 93\% potential predictability in user mobility across the whole user base.
 
-Human mobility is also influenced by social components: \cite{cho2011friendship} observe that social relationships
+Human mobility is also influenced by social components: \citep{cho2011friendship} observe that social relationships
 can explain about 10\% to 30\% of all human movement, while periodic
-behavior explains 50\% to 70\%; whereas \cite{ponieman2016mobility} show how social ties can be used to improve mobility predictions, for the case of people attendance to large social events.
+behavior explains 50\% to 70\%; whereas \citep{ponieman2016mobility} show how social ties can be used to improve mobility predictions, for the case of people attendance to large social events.
 
-Mobility analysis has applications in diverse areas such as urban planning (see \cite{wang2012understanding}) and disaster recovery (see \cite{lu2012predictability}).
+Mobility analysis has applications in diverse areas such as urban planning (see \citep{wang2012understanding}) and disaster recovery (see \citep{lu2012predictability}).
 In particular, mobile phone records contain information about the movements of large subsets of the population of a country, and make them very useful to understand the spreading dynamics of infectious diseases, while preserving the privacy of users.
 
-They have been used to understand the diffusion of malaria in Kenya by \cite{wesolowski2012quantifying} and in Ivory Coast by \cite{enns2013human}, including the refining of infection models performed by \cite{chunara2013large}.
-The cited works on Ivory Coast were presented using the ``Data for Development'' (\cite{d4d}) challenge datasets released in 2013. \cite{tizzoni2014use} compare different mobility models using theoretical approaches, available census data and algorithms based on CDRs interactions to infer movements.
+They have been used to understand the diffusion of malaria in Kenya by \citep{wesolowski2012quantifying} and in Ivory Coast by \citep{enns2013human}, including the refining of infection models performed by \citep{chunara2013large}.
+The cited works on Ivory Coast were presented using the ``Data for Development'' (\citep{d4d}) challenge datasets released in 2013. \citep{tizzoni2014use} compare different mobility models using theoretical approaches, available census data and algorithms based on CDRs interactions to infer movements.
 They found that the models based on CDRs and mobility census data are highly correlated, illustrating their use as mobility proxies.
 
-Mobile phone data has also been used to predict the geographic spread and timing of Dengue epidemics by \cite{wesolowski2015impact}.
+Mobile phone data has also been used to predict the geographic spread and timing of Dengue epidemics by \citep{wesolowski2015impact}.
 This analysis was performed for the country of Pakistan, which is representative of many countries on the verge of countrywide endemic dengue transmission.
 Other works directly study CDRs to characterize human mobility and other sociodemographic information.
-A complete survey of mobile traffic analysis articles may be found in \cite{naboulsi2015mobile}, which also reviews additional studies based on the Ivory Coast dataset mentioned above.
+A complete survey of mobile traffic analysis articles may be found in \citep{naboulsi2015mobile}, which also reviews additional studies based on the Ivory Coast dataset mentioned above.
 
 In this work we intend to show how these data points can help in the problem of Chagas disease, by means of accurately describing people migrations and movements at national level.
 We expect to add more relevant information to the problem of detecting foci of communities with high rates of prevalence, out of the endemic region.
@@ -112,10 +112,10 @@ Examples of these machine learning programs are now widespread to the point wher
 Due to this, machine learning has \textit{practical} intersections with data and software engineering.
 
 
-\cite{Mitchell-MLearning} gives the following definition of Machine Learning:
+\citep{Mitchell-MLearning} gives the following definition of Machine Learning:
 ``A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P if its performance at tasks in T, as measured by P, improves with experience E''.
 
-For our purposes it is clear though that this definition\footnote{Other authors might reference machine learning as \textit{statistical learning}. See~\cite{hastie-elemstatslearn} as an example.} is not a mathematical one.
+For our purposes it is clear though that this definition\footnote{Other authors might reference machine learning as \textit{statistical learning}. See~\citep{hastie-elemstatslearn} as an example.} is not a mathematical one.
 However it serves to convey the idea of algorithms that automatically \textit{learn} to do a specific task better over time and with more data.
 Note that the ``goodness'' of their performance is inherently subjected to the evaluation criteria chosen for the task.
 Because of this, the concept of \textit{learning} within this context is less associated with the cognitive definition and is related to an optimization based approach.
@@ -139,7 +139,7 @@ To the best of our knowledge, this is the first work that leverages mobile phone
 
 For more than 50 years, vector control campaigns have been underway in Argentina as the main epidemic counter-measure.
 The \textit{Gran Chaco}, situated in the northern part of the country is home to the disease-carrying triatomines.
-This region is hyperendemic for the disease~\cite{OPS2014mapa}.
+This region is hyperendemic for the disease~\citep{OPS2014mapa}.
 A map of this ecoregion is shown in \cref{fig:granchaco}.
 
 \begin{figure}[ht]
@@ -165,14 +165,14 @@ Recent national estimates indicate that there exist between 1.5 and 2 million in
 In Argentina, less than 1\% of infected people are diagnosed and treated
 (the same statistic holds at the world level).
 
-Even though governmental programs have been ongoing for years now~\cite{plan_nacional_chagas}, data on the issue is scarce or hardly accessible.
+Even though governmental programs have been ongoing for years now~\citep{plan_nacional_chagas}, data on the issue is scarce or hardly accessible.
 This presents a real obstacle to ongoing research and coordination efforts to tackle the disease in the region.
 
 
 \subsection{Chagas Disease in  Mexico}\label{endemic_zone_mexico}
 
 
-In 2004, the joint work of \textit{Instituto Nacional de Cardiología ``Ignacio Chávez''} and  \textit{Instituto de Biología de la UNAM} resulted in a Chagas disease database for Mexico (\cite{cruz2006chagmex}).
+In 2004, the joint work of \textit{Instituto Nacional de Cardiología ``Ignacio Chávez''} and  \textit{Instituto de Biología de la UNAM} resulted in a Chagas disease database for Mexico (\citep{cruz2006chagmex}).
 Reviewing positive serology in blood banks and human reported cases per state, an epidemic risk map description was produced to geographically situate the disease.
 Based on this data, we defined the Mexican epidemic area, selecting the states having the top 25\% prevalence rates nationwide.
 The resulting risk region is shown in \cref{fig:endemic_zone_mexico}.
@@ -188,30 +188,30 @@ This region is considered as the endemic zone $E_Z$ for the Mexican case in the 
 \end{figure}
 
 
-The authors of~\cite{carabarin2013chagas} provide an extensive review of the
+The authors of~\citep{carabarin2013chagas} provide an extensive review of the
 research reports on Chagas disease in Mexico.
 The review is very critical, stating that there are no effective vector control programs in Mexico; and that the actual prevalence of the disease
 can only be estimated because no official reporting of cases is performed.
 
-According to~\cite{dumonteil1999update}, there are a total of 18 endemic areas in Mexico, located in the southeast, and these areas include the states of Oaxaca, Jalisco, Yucatán, Chiapas, Veracruz, Puebla, Guerrero, Hidalgo, and Morelos, all of them with rural areas.
-Chiapas, Oaxaca, Puebla, Veracruz and Yucatán are among the most affected states (where the prevalence may exceed 10\%), although cases have been reported in most areas of the country (\cite{cruz2006chagmex,dumonteil1999update}).
+According to~\citep{dumonteil1999update}, there are a total of 18 endemic areas in Mexico, located in the southeast, and these areas include the states of Oaxaca, Jalisco, Yucatán, Chiapas, Veracruz, Puebla, Guerrero, Hidalgo, and Morelos, all of them with rural areas.
+Chiapas, Oaxaca, Puebla, Veracruz and Yucatán are among the most affected states (where the prevalence may exceed 10\%), although cases have been reported in most areas of the country (\citep{cruz2006chagmex,dumonteil1999update}).
 Despite the lack of official reports, an estimate for the number of \textit{Trypanosoma cruzi} infections by state in the country
 indicates that the number of potentially
-affected people in Mexico is roughly 5.5 million (see~\cite{carabarin2013chagas}).
+affected people in Mexico is roughly 5.5 million (see~\citep{carabarin2013chagas}).
 Mexico, together with Bolivia, Colombia, and Central
 America, are among the countries most affected by this
-\textit{neglected tropical disease} (NTD), as reported by~\cite{hotez2013innovation}.
+\textit{neglected tropical disease} (NTD), as reported by~\citep{hotez2013innovation}.
 For what we know, nowadays the disease spreads across borders:
-Chagas and other neglected tropical diseases present in the north of Mexico remain highly endemic in the south of Texas as well (\cite{hotez2012texas}).
+Chagas and other neglected tropical diseases present in the north of Mexico remain highly endemic in the south of Texas as well (\citep{hotez2012texas}).
 
 In recent years there has been a focus on treating the disease with two available medications, benznidazole or nifurtimox.
 A study that explores the access to these two drugs in Mexico
 shows that less than 0.5\% of those who are infected with
-the disease received treatment in Mexico in years (\cite{manne2013barriers}).
+the disease received treatment in Mexico in years (\citep{manne2013barriers}).
 
 
 People from endemic areas of Chagas disease tend to migrate to industrialized cities of the country, mainly Mexico City, in search of jobs.
-In accordance with this movement, \cite{guzman2001epidemiology} showed
+In accordance with this movement, \citep{guzman2001epidemiology} showed
 that infected children under 5 year of age are frequently distributed in urban
 rather than in rural areas, indicating that the disease is becoming urbanized in
 Mexico.
