--- a/ch_machine_learning.tex
+++ b/ch_machine_learning.tex
@@ -13,8 +13,8 @@ This chapter will present an elementary introduction to the theory behind Machin
 The concepts and ideas developed here will be exemplified on concrete applications of the processed CDR data, using a Logistic Regression classifier.
 Also, the chapter will formulate the tasks that will be solved in later chapters, as means of transforming the long-term human migrations into a supervised classification problem.
 
-Most of the discussions here are based on information extracted from two distinguished textbooks: \textcite{bishop-patternRecognition} and \textcite{hastie-elemstatslearn}.
-Some fundamental concepts and material were also referrenced from\cite{scikit-learn}.
+Most of the discussions here are based on information extracted from two distinguished textbooks: \citep{bishop-patternRecognition} and \citep{hastie-elemstatslearn}.
+Some fundamental concepts and material were also referrenced from\citep{scikit-learn}.
 When other texts were used, they have been cited correspondingly in the text, and, where not specified, the reader can assume that the proof is based from the textbooks above mentioned.
 
 \section{Overview of Supervised Classification Applications}\label{section-supervised-learning}
@@ -61,7 +61,7 @@ And these also influence the way research is conducted in this area.
 
 
 In its essence, a machine learning method is a probabilistic model built from data and in this way it is very similar to a statistical model.
-However, it differs specially in that its focus is generally on the models' predictive abilities more than in the model's parameters estimates~\textcite{breiman-statisticalmodeling}.
+However, it differs specially in that its focus is generally on the models' predictive abilities more than in the model's parameters estimates~\citep{breiman-statisticalmodeling}.
 The algorithms will be built and used for a given phenomena, to try and replicate it as best as possible without really identifying the true nature of the mechanisms behind this phenomena.
 As such, most applications will try to \textit{imitate} the task's behavior rather than try to identify the real system behind it.
 %on this matter It also puts a great amount of weight on efficiency and computational scalability.
@@ -548,7 +548,7 @@ In other cases, the benefit of a reduction in the number of features is that the
 
 In addition, a more \textit{heuristic} argument for model parsimony follows from Occam's razor principle.
 Here it applies in that, any model can approximate the true underlying process, only up to a certain level; and if two models have the same predictive power, the simpler model should be preferred.
-Better examples on this point are illustrated in \cite{rasmussenGhahramani2001occamsRazor}.
+Better examples on this point are illustrated in \citep{rasmussenGhahramani2001occamsRazor}.
 The authors give examples  of how this principle applies in different Machine Learning settings.
 
 %For regularization we can find a number of different functionals $R(\cdot)$ to impose conditions on the model in different ways.
