--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -32,8 +32,8 @@ RSS(\theta_0,..,\theta_p) = \sum_{i=1}^n {[y_i - \hat{y}_i ] }^2 \\
 % The equation reflects our goal to correctly match a training sample with their targets (also known as labels).
 
 We know that the objective is to have  good model in the generlization sense: one which can make a \textit{good} prediction on any sample, even new ones from the true distribution of the data.
-This generalization concept is lacking in the preceding \cref{eq:rss} because it is built to fit the actual dataset as best as possible. 
-Given that $\mathcal{T}$ is a sample of the population, it is not straightforward from this that the model will perform well with any other given sample of the \textit{true} distribution of the data. 
+This generalization concept is lacking in the preceding \cref{eq:rss} because it is built to fit the actual dataset as best as possible.
+Given that $\mathcal{T}$ is a sample of the population, it is not straightforward from this that the model will perform well with any other given sample of the \textit{true} distribution of the data.
 %for $\mathcal{T}$.
 
 We need a way of measuring and comparing the generalization power between models to select the best supervised estimator.
@@ -42,7 +42,7 @@ For our test data, it means to have a model that can correctly label new samples
 % We'll see why it is a bad attempt to generalize the classification model constructed from the data.
 % Given that in supervised learning settings, the goal is to build a learner with low predictive error, the algorithm's generalization power will then lie on its ability to
 
-For now, let us assume that $f: X \rightarrow Y$ is a function which represents a true existent relationship in the data such as  
+For now, let us assume that $f: X \rightarrow Y$ is a function which represents a true existent relationship in the data such as
 $$Y = f(X) + \epsilon$$.
 
 In this mapping from feature to target space we assume $\epsilon$ to be the noise, with a null mean and fixed $\sigma^2$ variance i.e.\ $\epsilon \sim \calN(0,1)$.
@@ -100,9 +100,9 @@ If we consider the case of the squared loss function, we will have that this err
 
 Note that in this definition the expectation is taken conditional on the test set and also from which the model is built.
 
-Overall, we are ultimately wanting to know how the learner performs over the true distribution, or what is the average prediction error's for any sample of data. 
+Overall, we are ultimately wanting to know how the learner performs over the true distribution, or what is the average prediction error's for any sample of data.
 Note here that we also want to average out any specific influence of the training set on our fit model $\hat{f}$ which was trained from a specific dataset, but also on the $\hat{f^*}$ that would have resulted from training on the true distribution of the data.
-With this we can introduce a last definition: 
+With this we can introduce a last definition:
 \begin{definition}{Expected Prediction Error}
 	\begin{equation}
 %	Err = \Expect_{ \textbf{X}, \textbf{Y} } \left[ L(Y,f(X))  | \mathcal{T_s} \right]
@@ -125,7 +125,7 @@ This will be our approximated $EPE$ through the
 
 %Let \textbf{x} $\in \mathbb{R}^{p}$ denote a random input variable and \textbf{y} $\in \mathbb{R}$ denote a random output variable with joint distribution $P\left(\textbf{x},\textbf{y}\right)$.
 
-In order to find the best model for our task, we will turn to rank different ones according to their training errors over $\mathcal{T}$ and $\mathcal{T_s}$. 
+In order to find the best model for our task, we will turn to rank different ones according to their training errors over $\mathcal{T}$ and $\mathcal{T_s}$.
 Combinations of high or low values for these, across training and test data, will be used as model evaluation and by this we will start to find aspects of the algorithm which need improvement.
 
 \section{Bias and Variance}\label{section-biasVariance}
@@ -136,12 +136,12 @@ If we look closer at the $EPE$ for the specific case of the squared loss functio
 EPE = \Expect_X \Expect_{Y|X} \left[ \left\Vert Y - \hat{f}(X) \right\Vert_2^2 \right]
 \end{equation}
 
-It is not difficult to see that the model that minimizes this error is 
+It is not difficult to see that the model that minimizes this error is
 $$\hat{f}(x) = \Expect \left[ Y | X=x \right] $$.
 We say that our model $\hat{f}$ is an estimate of the true relation in the data, and takes the form above, with the form structure from the data.
 
-With the squared loss, the expected prediction error 
-$$\Expect \left[ \left\Vert Y - \hat{f}(X) \right\Vert_2^2 \right]$$ 
+With the squared loss, the expected prediction error
+$$\Expect \left[ \left\Vert Y - \hat{f}(X) \right\Vert_2^2 \right]$$
 of the model can be decomposed in the following way:
 
 \begin{equation}\label{squaredBiasDecomposition}
@@ -167,8 +167,8 @@ In the $EPE$'s decomposition we are integrating over the joint distribution of i
 As we've mentioned before, we have incomplete information on $P(x,y)$ given the limited amount of information in $\mathcal{T}$.
 We must assume then that calculating this integral is not possible for any $\theta$ so we must rely on estimation procedures.
 
-For example, we could try and sample $M$ i.i.d.\ points from $P(x,y)$ to approximate the integral by a Monte Carlo scheme. 
-With the squared loss function this would look as 
+For example, we could try and sample $M$ i.i.d.\ points from $P(x,y)$ to approximate the integral by a Monte Carlo scheme.
+With the squared loss function this would look as
 
 \begin{equation}\label{eq:mcarlo-approx}
 Err_{true}(\theta) \approx \frac{1}{M} \sum_i^M {( y - h(x \cdot \theta) )}^2
@@ -224,7 +224,7 @@ With this, the classification prediction error can be decomposed in
 Var(Y) + P(Y=\argmax_{1\leq i \leq K} P(Y=i)) - \sum_{i=1}^K P(\hat{f}(X) =i)P(Y=i)
 \end{equation}
 
-A more detailed explanation based on the works of~\cite{james-biasVarianceGeneral} is given in \cref{appx:sec:biasVarianceExtensionLoss}.
+A more detailed explanation based on the works of~\citep{james-biasVarianceGeneral} is given in \cref{appx:sec:biasVarianceExtensionLoss}.
 
 \subsection{Case of overfitting}\label{subsection-overfitting}
 
@@ -236,7 +236,7 @@ For example, in one of the most common scenarios we might have model that has a 
 If we also have that the model has a good performance on the $\mathrm{T}$, whilst having a poor performance on $\mathrm{Ts}$, it is said in the literature that the model is \textit{overfitting} the data.
 
 
-The reasons behind this scenario can be various and most of them are related to learners which are overly-complex or situations in which there is insufficient training data. 
+The reasons behind this scenario can be various and most of them are related to learners which are overly-complex or situations in which there is insufficient training data.
 This results in learners which are only suited for $\mathrm{T}$.
 
 Overfit models will fail to generalize on new data since the variance structure of the training set is such that the number of training samples is not enough to lower the overall variance of this model.
@@ -245,12 +245,12 @@ Overfit models will fail to generalize on new data since the variance structure 
 % A learner with of this characteristic will only work very accurately on the train set with poor performance on new samples.
 
 
-To illustrate this point, in \cref{figure:dtree_overfit_problem_2} we show the results from fitting a learner on our own CDR dataset. 
+To illustrate this point, in \cref{figure:dtree_overfit_problem_2} we show the results from fitting a learner on our own CDR dataset.
 We fit a Decision Tree classifier on \cref{target2} which has a high imbalance between the positive and negative target classes to illustrate the interaction between bias and variance.
 
 %Here we use , to try and produce a model which overfits $\mathcal{T}$.
 
-A discussion of this model's formulation is presented in \cref{ch:ensembleMethods}. 
+A discussion of this model's formulation is presented in \cref{ch:ensembleMethods}.
 This is a tree based model which increases its complexity by growing the tree's depth.
 In turn, this increases the number of features used in by the leaner to decide on the predicted target.
 %It is clear her that higher depth implies increasing model complexity\footnote{A detailed explanation of this technique can be found later in \cref{section:decision_trees}.}.
@@ -282,7 +282,7 @@ We note how at first it decreases when the model's complexity is increased.
 However, later when the model starts to overfit the data, we can see how the test error starts to rise whilst the train error keeps decreasing.
 This situation is important to our $EPE$ estimation cause it hints that the model has lost predictive power due to an increase in variance.
 
-In \protect\textcite{hastie-elemstatslearn} the authors give a rough heuristic to select the best model: stop increasing the model's complexity once the estimated $EPE$ stops decreasing.
+In \protect\citep{hastie-elemstatslearn} the authors give a rough heuristic to select the best model: stop increasing the model's complexity once the estimated $EPE$ stops decreasing.
 That is, chose the point where the scoring error of the test set stops decreasing along with the training error.
 For \cref{figure:dtree_overfit_problem_2}, this would roughly be when $Max Depth = 10$.
 
@@ -304,8 +304,8 @@ The theory is used to bound estimates the true expected prediction error from fi
 Its advantage is that it requires weak assumptions from the data and the structure of the model, and the results are distribution independent.
 
 Here we provide only a mention of VC dimension for the purpose of showing a theoretical approach to error estimation in machine learning methods.
-Most of the results and reasoning follows the works in \textcite{cherkassky-learning2007}.
-For a more broad development of this work, \textcite{vapnik-nature2000} is recommended too.
+Most of the results and reasoning follows the works in \citep{cherkassky-learning2007}.
+For a more broad development of this work, \citep{vapnik-nature2000} is recommended too.
 Here we present a brief comment on the consistency of the training error with respect to the prediction error and give example bounds for classification learners.
 
 
@@ -327,7 +327,7 @@ The class $F$ will then represent the set of all possible functions from which t
 
 As it was seen before in \cref{ch:machineLearning}, a common problem in supervised learning happens when a particular learner overfits the data.
 In practice, we find that this is common when $n$ is \textit{small} or when the number of features is \textit{large}.
-%is fit and then used to predict new values is 
+%is fit and then used to predict new values is
 
 Incorporating the loss functions directly into the model, SLT looks at functions of the form $$Q(t,\theta) \ = \ L(f_\theta(x,y))$$.
 
@@ -407,7 +407,7 @@ This implies that the capacity of the learner will be captured in the set of fun
 P\Bigg(  \left|  Err^n_{train}(\theta^*) - EPE(\theta_0) \right| > \epsilon \Bigg)  \leq 8 poly(\Theta,n) \exp{\large \left( {\frac{-n\epsilon^2}{32}} \right)  }
 \end{equation}\label{eq:vapnik-binaryBoundProbability}
 
-where $poly(\Theta,n)$ is a polynomial on $n$ whose coefficients depend only on VC dimension of the class of functions $F$. 
+where $poly(\Theta,n)$ is a polynomial on $n$ whose coefficients depend only on VC dimension of the class of functions $F$.
 For a longer list of results of the VC theory concerning prediction error bounds for binary classifiers, see \cref{appx:sec:vcDimension}.
 
 For practical applications though, use of these bound estimates might be limited to the determination of the VC value. This becomes increasingly difficult in algorithms which are more complex and expressive, such as neural networks.
@@ -417,7 +417,7 @@ Due to this limitation, we show in the next section a practiced approach which i
 
 \section{Cross Validation (CV)}\label{section:crossValidation}
 
-Classification models are algorithms which intend to build approximating functions to a stochastic process, by means of algorithms. 
+Classification models are algorithms which intend to build approximating functions to a stochastic process, by means of algorithms.
 Due to the searching nature of this process, in the generally large space of hyper-parameters, we have that when models are fitted, we end producing different learners.
 
 These differences between learners are controlled by the \textit{parameters} or configuration of the algorithm.
@@ -509,7 +509,7 @@ Thus in some cases, crude heuristic estimates or common sense is used to estimat
 As an example, we consider here a cross validation procedure over a Logistic Regression model, using \cref{target2} as a benchmark to compare.
 In this problem we are trying to find those users that used to live in the endemic area and migrated.
 
-The hyperparameter we decide to optimize is the model's regularization strength. 
+The hyperparameter we decide to optimize is the model's regularization strength.
 This was captured in the parameter $C = \frac{1}{\lambda}$ and recall from \cref{eq:logitRegularization} that this is the regularization strength of the model, where a smaller value in $C$ meant a stronger regularization.
 
 We perform this experiment and consider the difference in scores between  $\mathcal{T}$ and $\mathcal{T_s}$ for each possible $C$ value.
@@ -638,7 +638,7 @@ $F1$ & 0.0015 & 0.0071 & 0.005 & 4612.1 \\
 \end{table}
 
 It is clear from these results that all metrics favor stronger regularized models, except for the $Accuracy$ metric which favored the least regularized models of all CV procedures.
-As expected, calculating each score is straightforward from the contingency matrix and there are no significant runtime differences among them. 
+As expected, calculating each score is straightforward from the contingency matrix and there are no significant runtime differences among them.
 CV procedures all take nearly the same times to compute.
 %that there are no significant time differences in choosing one metric over another.
 
@@ -681,7 +681,7 @@ To find a balance between these two rates, the $ROC AUC$ metric measures the int
 The score calculated is thus known as \textit{Area Under the ROC Curve}.
 
 This metric follows the same properties as the ones mentioned before, where the best classifiers have values nearer to $1$.\footnote{As a side note, the $ROC AUC$ measure is proportional to the statistic of the Mann-Whitney U-test, where the classifier's mean output positive and negative classes are compared.
-More information on this can be found in \textcite{mason-rocAucRelationship}.}
+More information on this can be found in \citep{mason-rocAucRelationship}.}
 
 The following figures are example ROC curves for two of the problems defined from our dataset.
 
@@ -717,12 +717,12 @@ The difference in the two scores is notable and corresponds entirely to the prob
 
 \subsection{Final experiments on model selection}\label{sub:final_model_selection}
 
-As a last remark for this chapter, we show here a brief experiment with a Logistic Regression Classifier. 
+As a last remark for this chapter, we show here a brief experiment with a Logistic Regression Classifier.
 In this, we explore different hyperparameter configurations over a full CV procedure.
 The idea is to find users that lived in endemic regions in the past, namely \cref{target1}, yet excluding the feature that indicates in which state is the user currently living.
 We also set the ``ROC AUC'' metric to compare the $l1$ vs the $l2$ regularization of the model on more than a hundred values for the regularization parameter $C$.
 
-For both regularization types, we set a value for $C$ that ranged from $\exp^{-2}$ to $\exp^{5}$. 
+For both regularization types, we set a value for $C$ that ranged from $\exp^{-2}$ to $\exp^{5}$.
 Over all, we implement a cross validation routine of 8-folds.
 
 \cref{tab:roc_auc_logreg_target1_results} shows a summary of results.
@@ -778,5 +778,5 @@ To further explore this, we looked at their CV mean scores for each hyperparamet
 \end{figure}
 
 
-With these experiments we give an extended overview of how a complete model-selection pipeline is defined. 
+With these experiments we give an extended overview of how a complete model-selection pipeline is defined.
 Where we have to iterate and evaluate different hyper-parameter configurations by scoring the cross-validated learners.
